<resources>
    <string name="app_name">ECommerce</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Cart</string>
    <string name="menu_slideshow">Orders</string>
    <string name="menu_tools">Categories</string>
    <string name="menu_share">Settings</string>
    <string name="menu_send">Logout</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>
